--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,267 @@
+*{
+    box-sizing:border-box;
+    margin:0;
+    padding:0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size:14px;
+}
 
+.container{
+    display:grid;
+    grid-template-columns:1fr 4fr;
+    grid-template-rows:0.5fr 5fr;
+}
+
+.container ul{
+    display: grid;
+    list-style-type: none;
+}
+
+.container a {
+    text-decoration: none;
+}
+
+.sidebar{
+    background:lightseagreen;
+    grid-row:1/3;
+}
+
+.sidebar ul{
+    background:pink;
+    gap: 12px;
+}
+
+.sidebar li{
+    background:green;
+    display:grid;
+    grid-template-columns:1fr 3fr;
+    align-items: center;
+    gap: 15px;
+}
+
+.sidebar .icon{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.sidebar img{
+    width:45%;
+}
+
+.sidebar a{
+    color:white;
+    font-size: 1.4rem;
+    font-weight: 600;
+    display: block;
+}
+
+.sidebar li:first-child {
+    padding: 1rem 0 1.7rem 0;
+}
+
+.sidebar li:first-child a{
+    font-size: 1.7rem;
+}
+
+.sidebar li:first-child img {
+    width: 60%;
+}
+
+.sidebar li:nth-child(8){
+    padding-top: 1.8rem;
+}
+
+.header{
+    padding: 15px 4rem 10px;
+}
+
+.header img{
+    width:100%;
+}
+
+.header ul{
+    align-items: center;
+    column-gap:20px;
+}
+
+.header-list-top{
+    grid-template-columns: 6fr 3fr 0.3fr 0.5fr 1.5fr;      
+}
+
+.header-list-bottom {
+    grid-template-columns: 6fr 2fr repeat(3, 1fr);
+}
+
+.header .search{
+    display:grid;
+    grid-template-columns:0.1fr 3fr;
+    align-items:center;
+    gap:10px;
+}
+
+.header .icon, .header .button-start{
+    grid-column:-4;
+}
+
+.header .avatar-with-name{
+    display:grid;
+    grid-template-columns:0.15fr 1fr;
+    column-gap:15px;
+}
+
+.header .avatar-with-name a {
+    grid-row:1/3;
+}
+
+.header .avatar-with-name p{
+    align-self:self-end;
+    font-size:0.8rem;
+}
+
+.header .avatar-with-name p:last-child{
+    align-self: self-start;
+    font-size:1.4rem;
+    font-weight:600;
+}
+
+.header a{
+    display:block;
+}
+
+.nav-buttons a{
+    text-align: center;
+    background: cadetblue;
+    padding: 5px;
+    border-radius: 25px;
+    color: white;
+}
+
+
+.dash{
+    background: darkgrey;
+    display: grid;
+    grid-template-columns:3fr 1.25fr;
+    grid-template-rows:30px 0.5fr 40px 1fr;
+    padding: 2rem;
+    column-gap: 2rem;
+    align-items:start;
+}
+
+.dash h2{
+    font-size:1.25rem;
+    font-weight:normal;
+}
+
+#trending{
+    align-self:center;
+}
+
+.card-container{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap:2rem;
+    grid-row:2/5;
+}
+
+.card, .side-card{
+    background:white;
+    border-radius:5px;
+}
+
+.side-card {
+    padding: 10px 20px;
+}
+
+.card{
+    border-left: red 6px solid;
+    padding:25px 25px;
+}
+
+.card h3{
+    font-weight:600;
+}
+
+.card p {
+    color:grey;
+}
+
+.card ul{
+    list-style-type:none;
+    margin:0;
+    padding:0;
+    margin-top:1.5rem;
+    display:grid;
+    grid-template-columns: 6fr 1fr 1fr 1fr;
+    gap:10px;
+}
+
+.card ul li:nth-child(1) {
+    grid-column:2;
+}
+
+.card ul li:nth-child(2) {
+    grid-column: 3;
+}
+
+.card ul li:nth-child(3) {
+    grid-column: 4;
+}
+
+.card ul li a{
+    width:100%;
+    display:block;
+}
+
+.card ul li a img{
+    width: 100%;
+}
+
+.side-card-container{
+    display:grid;
+    grid-template-rows:40px 1fr 40px 1fr;
+
+}
+
+.side-card-section{
+    padding:15px 5px;
+    border-bottom:1px solid grey;
+}
+
+.side-card-section:last-child {
+    border:none;
+}
+
+.side-card-section h5{
+    font-weight:600;
+    font-size:0.9rem;
+}
+
+.side-card-section p {
+    color:grey;
+    font-size:0.8rem;
+}
+
+.side-card-users{
+    display:grid;
+    grid-template-columns: 50px 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 8px;
+    margin-top: 10px;
+}
+
+.side-card-users img{
+    grid-row:1/3;
+    width:100%;
+}
+
+.side-card-users p {
+    font-size:0.9rem;
+}
+
+.handle{
+    align-self:center;
+}
+
+.handle-desriptiomn{
+    color:grey;
+}
