--- a/styles.css
+++ b/styles.css
@@ -22,17 +22,15 @@
 }
 
 .sidebar{
-    background:lightseagreen;
+    background:#1992d4;
     grid-row:1/3;
 }
 
 .sidebar ul{
-    background:pink;
-    gap: 12px;
+    gap: 18px;
 }
 
 .sidebar li{
-    background:green;
     display:grid;
     grid-template-columns:1fr 3fr;
     align-items: center;
@@ -45,7 +43,7 @@
 }
 
 .sidebar img{
-    width:45%;
+    width:35%;
 }
 
 .sidebar a{
@@ -85,7 +83,8 @@
 }
 
 .header-list-top{
-    grid-template-columns: 6fr 3fr 0.3fr 0.5fr 1.5fr;      
+    grid-template-columns: 6fr 3fr 0.3fr 0.5fr 1.5fr;   
+    margin-bottom: 10px;
 }
 
 .header-list-bottom {
@@ -94,9 +93,17 @@
 
 .header .search{
     display:grid;
-    grid-template-columns:0.1fr 3fr;
+    grid-template-columns:0.18fr 3fr;
     align-items:center;
     gap:10px;
+    height:100%;
+}
+
+.header .search input{
+    background:#e2e8f0;
+    border:none;
+    border-radius:25px;
+    height:60%;
 }
 
 .header .icon, .header .button-start{
@@ -130,7 +137,7 @@
 
 .nav-buttons a{
     text-align: center;
-    background: cadetblue;
+    background: #1992d4;
     padding: 5px;
     border-radius: 25px;
     color: white;
@@ -138,7 +145,7 @@
 
 
 .dash{
-    background: darkgrey;
+    background: #e2e8f0;
     display: grid;
     grid-template-columns:3fr 1.25fr;
     grid-template-rows:30px 0.5fr 40px 1fr;
@@ -173,7 +180,7 @@
 }
 
 .card{
-    border-left: red 6px solid;
+    border-left: #f0b429 6px solid;
     padding:25px 25px;
 }
 
@@ -189,10 +196,10 @@
     list-style-type:none;
     margin:0;
     padding:0;
-    margin-top:1.5rem;
+    margin-top:2.5rem;
     display:grid;
     grid-template-columns: 6fr 1fr 1fr 1fr;
-    gap:10px;
+    gap:20px;
 }
 
 .card ul li:nth-child(1) {
